--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -20,7 +20,7 @@
       <div class="container">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTIqtC7K9hXXGa821c0OkwppyASRCjHj_Pubh9ScF5v9XVC8acGhQ&s" alt="Avatar" style="width:120px">
         <p><%= f.fname %>&nbsp;<%= f.lname %><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label>Email:</label>&nbsp;<%= f.email %></span></p>
-        <p><span><%= link_to 'Show Details', user_path(f),:class => "links"%>&nbsp;&nbsp;<%= link_to 'Edit Details', edit_user_path(f),:class => "links"%>&nbsp;&nbsp;<%= link_to 'Delete User', user_path(f), method: :delete,data: {confirm: "Are you sure you want to delete the user?"},:class => "links"%></p>
+        <p><%= link_to 'Show Details', user_path(f),:class => "links"%>&nbsp;&nbsp;<%= link_to 'Edit Details', edit_user_path(f),:class => "links"%>&nbsp;&nbsp;<%= link_to 'Generate Payslip', payslip_path(f),:class => "links"%>&nbsp;&nbsp;<%= link_to 'Delete User', user_path(f), method: :delete,data: {confirm: "Are you sure you want to delete the user?"},:class => "links"%></p>
       </div>
     </a>
   <% end %>
