--- a/app/views/accounts/payslip.html.erb
+++ b/app/views/accounts/payslip.html.erb
@@ -12,7 +12,7 @@
       <%= link_to "Logout", logout_path, method: :delete, data: {confirm: "Do you want to logout?"} %>
     </div>
     <fieldset style="margin-left: 400px; margin-right: 300px; border: 0px;">
-      <legend>EMPLOYEE PAYSLIP</legend>
+      <legend><h3>EMPLOYEE PAYSLIP</h3></legend>
     <table align = center, width=125%>
       <td colspan="2"><label><h3>Employee ID: <%= @user.empid%></h3></label></td>  
    </fieldset>
